2007-12-01  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-name-anchor-from-hist): New buffer-local variable.
	(w3m-clear-local-variables): Also clear w3m-name-anchor-from-hist.
	(w3m-goto-url): Save and restoe w3m-name-anchor-from-hist.
	(w3m-search-name-anchor): Record (point)s of before and after following
	a name-anchor.
	(w3m-view-previous-page): If possible, move back the cursor to the
	point where it was before following name-anchors.

2007-11-30  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-proc.el (w3m-process-y-or-n-p): Ignore space to avoid answering y
	without intention.

2007-11-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url-new-session): Use
	w3m-active-region-or-url-at-point.  Reported by Naohiro Aota.

	* w3m-ems.el (w3m-create-image): Don't modify case-fold-search.

	* w3m-xmas.el (w3m-create-image): Ditto; parse image data to identify
	its type in the beginning position.

2007-11-29  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-w3m-dump-extra, w3m-w3m-retrieve): Removed image data
	type tests.

	* w3m-xmas.el (w3m-create-image): Parse image data first, use server's
	content-type when it failed to identify type.

	* w3m-ems.el (w3m-create-image): Ditto.

2007-11-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Fix google news entry.

	* w3m-ems.el (w3m-create-image): Parse image data if it failed in
	identifying type.

	* w3m-xmas.el (w3m-create-image): Ditto.

2007-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-resize-inline-image-internal): Validate image url.
	Reported by Naohiro Aota <nao.aota@gmail.com>.

2007-11-27  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-toggle-inline-images-internal): Confirm retrieving
	non-secure image.
	(w3m-resize-inline-image-internal): Ditto.

2007-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>,
	    TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-retrieve-and-render): Permit leaving safe pages without